RESOLVED FIXED70522
[cairo] Forward declaration of GraphicsContextState uses class instead of struct
https://bugs.webkit.org/show_bug.cgi?id=70522
Summary [cairo] Forward declaration of GraphicsContextState uses class instead of struct
Alejandro G. Castro
Reported 2011-10-20 10:11:50 PDT
Inside PlatformContextCairo.h we are forward declaring the GraphicsContextState as a class but it is actually a struct.
Attachments
Proposed patch (1.80 KB, patch)
2011-10-20 10:16 PDT, Alejandro G. Castro
mrobinson: review+
Alejandro G. Castro
Comment 1 2011-10-20 10:16:32 PDT
Created attachment 111800 [details] Proposed patch
Alejandro G. Castro
Comment 2 2011-10-21 05:43:40 PDT
Note You need to log in before you can comment on or make changes to this bug.