2011-10-21  Alejandro G. Castro  <alex@igalia.com>

[cairo] Forward declaration of GraphicsContextState uses class instead of struct
        https://bugs.webkit.org/show_bug.cgi?id=70522

        The type is a struct not a class, replace the definition in the
        forward declaration.

        Reviewed by Martin Robinson.

        * platform/graphics/cairo/PlatformContextCairo.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@98096 bbb929c8-8fbe-4397-9dbb-9b2b20218538