third_party/WebKit/Source/WebCore/platform/graphics/cairo/PlatformContextCairo.h
@@ -33,7 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
-class GraphicsContextState;
+struct GraphicsContextState;
 
 // Much like PlatformContextSkia in the Skia port, this class holds information that
 // would normally be private to GraphicsContext, except that we want to allow access
